--- a/list.html
+++ b/list.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Changer la couleur des li au clic</title>
+  <title>Color Me</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body background="colors.jpg">
 
 <ol id="liste">
   <li>Item 1</li>
@@ -15,7 +15,6 @@
   <li>Item 4</li>
   <li>Item 5</li>
 </ol>
-
 <script src="list.js"></script>
 </body>
 </html>
